change acccording code standerd refs #9858

--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
   	<link rel="stylesheet" type="text/css" href="head_bottom.css">
   </head>
 
-  <!--about the logo of the page  -->
+  <!--design of the logo of the page and header file -->
 
   <body >
   	<div class="header">
