--- a/bottom.html
+++ b/bottom.html
@@ -3,12 +3,13 @@
 	"http://www.w3.org/TR/html4/strict.dtd">
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="head_bottom.css">
+	<link rel = "stylesheet" type = "text/css" href = "head_bottom.css">
 </head>
 <body>
-	<div class="bottom">
-		<p class="bottomtext" ><br>2004-2014 Innotraining&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="#">Contact us</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#"> Privacy</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">Terms</a>
+	<!-- design of bottom file -->
+	<div class = "bottom">
+		<p class = "bottomtext" ><br>2004-2014 Innotraining&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href = "#">Contact us</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#"> Privacy</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#">Terms</a>
 		</p>
 	</div>
 </body>
