changes in desigining for better look refs #9858

--- a/header.html
+++ b/header.html
@@ -11,8 +11,11 @@
   <body >
   	<div class="header">
   		<p id="logo">
-  			<span style="color:white;"><img src="logo.jpg">  Inno</span>
-  			<span style="color:#FFCC00">Training</span>
+      <table>
+      <tr style="font-size:20px;"><td><img src="logo.jpg" style="margin-top:0px;"></td>
+  			<td><span style="color:white;">  Inno</span></td>
+  			<td><span style="color:#FFCC00">Training</span></td></tr>
+        </table>
   		</p>
   	</div>
   </body>
