--- a/common/html/header.html
+++ b/common/html/header.html
@@ -2,9 +2,9 @@
   	<div class="header">
   		<p id="logo">
       <table>
-      <tr style="font-size:20px;"><td><img src="../images/logo.jpg" style="margin-top:0px;"></td>
-  			<td><span style="color:white;">  Inno</span></td>
-  			<td><span style="color:#FFCC00">Training</span></td></tr>
+      <tr style="font-size:20px;"><td></td>
+  			<td><span style="color:#2E2D2D;font-size:30px;">  Inno</span></td>
+  			<td><span style="color:#6AACA5;font-size:30px;">Training</span></td></tr>
         </table>
   		</p>
   	</div>
