--- a/common/html/bottom.html
+++ b/common/html/bottom.html
@@ -1,7 +1,7 @@
 
 
 
-	<!-- design of bottom file -->
+	<!-- design of footer  -->
 	<div class = "bottom">
 		<p class = "bottomtext" ><br>2004-2014 Innotraining&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href = "#">Contact us</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#"> Privacy</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#">Terms</a>
